--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "ng2-semantic-ui": "^0.9.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "tslint-config-prettier": "^1.18.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
